<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/home_tab_championships"
            android:enabled="true"
            android:icon="@drawable/ic_championships"
            android:title="@string/home_championships_tab_text"
    />
    <item
            android:id="@+id/home_tab_gallery"
            android:enabled="true"
            android:icon="@drawable/ic_gallery"
            android:title="@string/home_gallery_tab_text"
    />

    <item
            android:id="@+id/home_tab_notifications"
            android:enabled="true"
            android:icon="@drawable/ic_notifications"
            android:title="@string/home_notifications_tab_text"
    />

    <item
            android:id="@+id/home_tab_profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/home_profile_tab_text"
    />
</menu>