<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_championship_txt_name"
            android:hint="@string/edit_championship_txt_name_hint"
            android:inputType="text"
    />

    <ListView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_championship_txt_name"
            android:layout_marginTop="10dp"
            android:divider="@null"
            app:layout_constraintStart_toStartOf="@id/edit_championship_txt_name"
            app:layout_constraintEnd_toEndOf="@id/edit_championship_txt_name"
            android:id="@+id/edit_championship_lst_settings"
    />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_championship_txt_cars"
            app:layout_constraintTop_toBottomOf="@id/edit_championship_lst_settings"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/edit_championship_txt_name"
            app:layout_constraintEnd_toEndOf="@id/edit_championship_txt_name"
            android:hint="@string/edit_championship_txt_cars_hint"
            android:inputType="text"

    />
    <com.google.android.material.button.MaterialButton
            style="@style/SimCareerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_championship_txt_cars"
            app:layout_constraintEnd_toEndOf="@id/edit_championship_txt_name"
            app:layout_constraintStart_toStartOf="@id/edit_championship_txt_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_championship_btn_confirm"
            android:text="@string/edit_championship_btn_confirm"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
